Attempt to fix the backdrop display on iPhone

--- a/styles/index.css
+++ b/styles/index.css
@@ -203,7 +203,6 @@ a {
    .logo {
       width: 40px;
       height: 40px;
-      z-index: 10;
    }
 
    .nav-items {
